@@ -12,13 +12,13 @@ require("config.php");
 
 
 if ( $_GET['type'] == 'asset' ) {
-require($base_dir . '/templates/interface/php/user/charts/asset-charts.php');
+require($base_dir . '/templates/interface/php/user/user-charts/asset-charts.php');
 }
 elseif ( $_GET['type'] == 'system' ) {
-require($base_dir . '/templates/interface/php/user/charts/system-charts.php');
+require($base_dir . '/templates/interface/php/user/user-charts/system-charts.php');
 }
 elseif ( $_GET['type'] == 'balance_stats' ) {
-require($base_dir . '/templates/interface/php/user/charts/balance-stats-charts.php');
+require($base_dir . '/templates/interface/php/user/user-charts/balance-stats-charts.php');
 }
 
 ?>
