@@ -57,9 +57,9 @@ $num_in_first_chart = 0;
 foreach ( $chart_data as $chart_key => $chart_value ) {
 
 // Average for first / last value
-$check_chart_value = number_to_string( delimited_string_sample($chart_value, ',', 'first') + delimited_string_sample($chart_value, ',', 'last') / 2 );
+//$check_chart_value = number_to_string( delimited_string_sample($chart_value, ',', 'first') + delimited_string_sample($chart_value, ',', 'last') / 2 );
 // Just last value
-//$check_chart_value = number_to_string( delimited_string_sample($chart_value, ',', 'last') );
+$check_chart_value = number_to_string( delimited_string_sample($chart_value, ',', 'last') );
 	
 	if ( $chart_key != 'time' && $check_chart_value != 'NO_DATA' && $check_chart_value > 0.000000 ) {
 		
